--- a/.gitmodules
+++ b/.gitmodules
@@ -1,54 +1,72 @@
 [submodule "dotvim/bundle/nerdcommenter"]
 	path = dotvim/bundle/nerdcommenter
 	url = https://github.com/scrooloose/nerdcommenter.git
+	ignore = untracked
 [submodule "dotvim/bundle/ack"]
 	path = dotvim/bundle/ack
 	url = https://github.com/mileszs/ack.vim.git
+	ignore = untracked
 [submodule "dotvim/autocomplpop"]
 	path = dotvim/bundle/autocomplpop
 	url = https://github.com/clones/vim-autocomplpop.git
+	ignore = untracked
 [submodule "dotvim/bundle/delimitmate"]
 	path = dotvim/bundle/delimitmate
 	url = https://github.com/Raimondi/delimitMate
+	ignore = untracked
 [submodule "dotvim/bundle/endwise"]
 	path = dotvim/bundle/endwise
 	url = https://github.com/tpope/vim-endwise.git
+	ignore = untracked
 [submodule "dotvim/bundle/gist"]
 	path = dotvim/bundle/gist
 	url = https://github.com/mattn/gist-vim.git
+	ignore = untracked
 [submodule "dotvim/bundle/pastie"]
 	path = dotvim/bundle/pastie
 	url = https://github.com/tpope/vim-pastie.git
+	ignore = untracked
 [submodule "dotvim/bundle/rails"]
 	path = dotvim/bundle/rails
 	url = https://github.com/tpope/vim-rails.git
+	ignore = untracked
 [submodule "dotvim/bundle/snipmate"]
 	path = dotvim/bundle/snipmate
 	url = https://github.com/msanders/snipmate.vim.git
+	ignore = untracked
 [submodule "dotvim/bundle/surround"]
 	path = dotvim/bundle/surround
 	url = https://github.com/tpope/vim-surround.git
+	ignore = untracked
 [submodule "dotvim/bundle/syntastic"]
 	path = dotvim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+	ignore = untracked
 [submodule "dotvim/bundle/rspec"]
 	path = dotvim/bundle/rspec
 	url = https://github.com/taq/vim-rspec.git
+	ignore = untracked
 [submodule "dotvim/bundle/l9"]
 	path = dotvim/bundle/l9
 	url = https://github.com/vim-scripts/L9.git
+	ignore = untracked
 [submodule "dotvim/bundle/fuzzyfinder"]
 	path = dotvim/bundle/fuzzyfinder
 	url = https://github.com/vim-scripts/FuzzyFinder.git
+	ignore = untracked
 [submodule "dotvim/bundle/tabular"]
 	path = dotvim/bundle/tabular
 	url = https://github.com/godlygeek/tabular.git
+	ignore = untracked
 [submodule "dotvim/bundle/colors-solarized"]
 	path = dotvim/bundle/colors-solarized
 	url = git://github.com/altercation/vim-colors-solarized.git
+	ignore = untracked
 [submodule "dotvim/bundle/railscasts-theme"]
 	path = dotvim/bundle/railscasts-theme
 	url = https://github.com/jpo/vim-railscasts-theme.git
+	ignore = untracked
 [submodule "dotvim/bundle/jellybeans-colors"]
 	path = dotvim/bundle/jellybeans-colors
 	url = https://github.com/nanotech/jellybeans.vim.git
+	ignore = untracked
